added comemnts and logs for baggage policy